<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">

    <AutoCompleteTextView
        android:id="@+id/textInputCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:completionThreshold="0"
        android:hint="@string/city"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/buttonInputCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/buttonOk"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputCity" />

    <CheckBox
        android:id="@+id/checkBoxMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/moreInfo"
        app:layout_constraintEnd_toEndOf="@+id/textInputCity"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputCity"
        app:layout_constraintTop_toBottomOf="@+id/buttonInputCity" />


</androidx.constraintlayout.widget.ConstraintLayout>